Adding link as external link
# Conflicts:
#	admin-dev/themes/new-theme/js/pages/product/edit/specific-prices-manager.ts
#	admin-dev/themes/new-theme/js/pages/product/product-map.ts

# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/catalog_price_rule.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/catalog_price_rule.yml
@@ -54,3 +54,13 @@ admin_catalog_price_rules_bulk_delete:
     _controller: 'PrestaShopBundle\Controller\Admin\Sell\Catalog\CatalogPriceRuleController::bulkDeleteAction'
     _legacy_controller: AdminSpecificPriceRule
 #  _legacy_link: AdminSpecificPriceRule:submitBulkdeletespecific_price_rule
+
+admin_catalog_price_rules_product_form_list:
+  path: /product-form-list
+  methods: [ GET ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Sell\Catalog\CatalogPriceRuleController::productFormListAction'
+    _legacy_controller: AdminSpecificPriceRule
+#  _legacy_link: AdminSpecificPriceRule:submitBulkdeletespecific_price_rule
+  options:
+    expose: true
