--- a/src/PrestaShopBundle/Resources/config/services/adapter/catalog_price_rule.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/catalog_price_rule.yml
@@ -31,3 +31,17 @@ services:
     tags:
       - name: 'tactician.handler'
         command: 'PrestaShop\PrestaShop\Core\Domain\CatalogPriceRule\Query\GetCatalogPriceRuleForEditing'
+
+  prestashop.adapter.catalog_price_rule.query_handler.get_catalog_price_rule_list_handler:
+    class: 'PrestaShop\PrestaShop\Adapter\CatalogPriceRule\QueryHandler\GetCatalogPriceRuleListHandler'
+    arguments:
+      - '@prestashop.adapter.catalog_price_rule.repository.catalog_price_rule_repository'
+    tags:
+      - name: 'tactician.handler'
+        command: 'PrestaShop\PrestaShop\Core\Domain\CatalogPriceRule\Query\GetCatalogPriceRuleList'
+
+  prestashop.adapter.catalog_price_rule.repository.catalog_price_rule_repository:
+    class: PrestaShop\PrestaShop\Adapter\CatalogPriceRule\Repository\CatalogPriceRuleRepository
+    arguments:
+      - '@doctrine.dbal.default_connection'
+      - '%database_prefix%'
