Fixing last things
# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json
#	src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig

# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

# Conflicts:
#	admin-dev/themes/new-theme/js/fos_js_routes.json

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/catalog_price_rule.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/catalog_price_rule.yml
@@ -32,6 +32,8 @@ admin_catalog_price_rules_edit:
     # _legacy_link: AdminSpecificPriceRule:updatespecific_price_rule
     _legacy_parameters:
       id_specific_price_rule: catalogPriceRuleId
+  options:
+    expose: true
   requirements:
     catalogPriceRuleId: \d+
 
