--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -259,6 +259,7 @@ default:
             - Tests\Integration\Behaviour\Features\Context\Domain\Product\Combination\GenerateCombinationFeatureContext
             - Tests\Integration\Behaviour\Features\Context\Domain\AttributeFeatureContext
             - Tests\Integration\Behaviour\Features\Context\Domain\AttributeGroupFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\Product\UpdateProductFeatureContext
         meta:
             paths:
                 - "%paths.base%/Features/Scenario/Meta"
