--- a/src/PrestaShopBundle/Resources/config/services/core/mail_template.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/mail_template.yml
@@ -7,6 +7,8 @@ services:
 
   prestashop.core.mail_template.theme_folder_scanner:
     class: 'PrestaShop\PrestaShop\Core\MailTemplate\FolderThemeScanner'
+    arguments:
+      - !php/const _PS_MODULE_DIR_
 
   prestashop.core.mail_template.theme_folder_catalog:
     class: 'PrestaShop\PrestaShop\Core\MailTemplate\FolderThemeCatalog'
