Finally debug the query for group shop context, also improve the associated integration test to check all use cases

--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -34,6 +34,7 @@ services:
       - '@prestashop.core.grid.query.filter.doctrine_filter_applicator'
       - '@prestashop.adapter.legacy.configuration'
       - '@prestashop.adapter.shop.repository.shop_group_repository'
+      - '@prestashop.adapter.shop.context'
     public: true
 
   prestashop.core.grid.query_builder.product_light:
