--- a/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
@@ -121,7 +121,7 @@ services:
       - '@prestashop.adapter.category.repository.category_repository'
       - '@PrestaShop\PrestaShop\Adapter\Product\Stock\Repository\StockAvailableMultiShopRepository'
       - '@prestashop.adapter.product.virtual_product.repository.virtual_product_file_repository'
-      - '@prestashop.adapter.product.image.repository.product_image_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Image\Repository\ProductImageMultiShopRepository'
       - '@prestashop.adapter.attachment.attachment_repository'
       - '@prestashop.adapter.tax.tax_computer'
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_COUNTRY_DEFAULT')"
