add missing all shops fields in bulk combination form and adjust data formatter to include "allShops" prefix formatting

--- a/src/PrestaShopBundle/Resources/config/services/core/form/data_formatter.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/data_formatter.yml
@@ -2,6 +2,8 @@ services:
   _defaults:
     public: true
 
-  PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataFormatter\BulkCombinationFormDataFormatter: ~
+  PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataFormatter\BulkCombinationFormDataFormatter:
+    arguments:
+      - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
 
   PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataFormatter\CombinationListFormDataFormatter: ~
