Add data attributes on all edition links to include the select modal content

--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
@@ -301,6 +301,7 @@ services:
     arguments:
       - '@prestashop.adapter.legacy.configuration'
       - '@prestashop.adapter.shop.context'
+      - '@form.factory'
     public: true
 
   prestashop.core.grid.definition.factory.product_light:
