--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/product_v2/product.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/product_v2/product.yml
@@ -54,6 +54,15 @@ admin_products_grid_category_filter:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\ProductController::gridCategoryFilterAction
     _legacy_controller: AdminProducts
 
+admin_products_grid_shop_previews:
+  path: /shop_previews/{productId}
+  methods: [ GET ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\ProductController::productShopPreviewsAction
+    _legacy_controller: AdminProducts
+  requirements:
+    productId: \d+
+
 admin_products_v2_create:
   path: /create
   methods: [ GET, POST ]
