Create new grid definition and query for multishop details, it is based on the regular product grid but focuses on one product only but all its shops

--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
@@ -304,6 +304,15 @@ services:
       - '@form.factory'
     public: true
 
+  prestashop.core.grid.definition.factory.product.shops:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Definition\Factory\ProductShopsGridDefinitionFactory'
+    parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
+    arguments:
+      - '@prestashop.adapter.legacy.configuration'
+      - '@prestashop.adapter.shop.context'
+      - '@form.factory'
+    public: true
+
   prestashop.core.grid.definition.factory.product_light:
     class: 'PrestaShop\PrestaShop\Core\Grid\Definition\Factory\ProductLightGridDefinitionFactory'
     parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
