--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -399,6 +399,14 @@ services:
       - '@prestashop.core.grid.query.doctrine_query_parser'
       - 'product'
 
+  prestashop.core.grid.data.factory.product.shops:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    arguments:
+      - '@prestashop.core.grid.query_builder.product.shops'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'product'
+
   prestashop.core.grid.data.factory.product_light:
     class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
     arguments:
