--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -60,6 +60,8 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           extensions: mbstring, intl, gd, xml, dom, json, fileinfo, curl, zip, iconv, simplexml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v3
 
       - name: Get Composer Cache Directory
@@ -118,6 +120,8 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           extensions: mbstring, intl, gd, xml, dom, json, fileinfo, curl, zip, iconv, simplexml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v3
 
       - name: Get Composer Cache Directory
