Add legacy controller

--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/advanced_parameters/authorization_server.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/advanced_parameters/authorization_server.yml
@@ -3,6 +3,8 @@ admin_authorized_applications_index:
   methods: [ GET ]
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Configure\AdvancedParameters\AuthorizationServer\ApplicationController::indexAction
+    _legacy_controller: AdminAuthorizationServer
+    _legacy_link: AdminAuthorizationServer
 
 admin_authorized_applications_view:
   path: /applications/{authorizedApplicationId}
