--- a/src/PrestaShopBundle/Resources/config/services/bundle/event_listener.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/event_listener.yml
@@ -6,6 +6,7 @@ services:
     class: PrestaShopBundle\EventListener\UserLocaleListener
     arguments:
       - "@prestashop.adapter.legacy.context"
+      - "@prestashop.adapter.legacy.configuration"
     tags:
       - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 15 }
 
