Adding constant to the yml

--- a/src/PrestaShopBundle/Resources/config/services/core/category.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/category.yml
@@ -12,3 +12,4 @@ services:
     deprecated: ~
 
   PrestaShop\PrestaShop\Core\Category\Provider\MenuThumbnailAvailableKeyProvider:
+    - !php/const _PS_CAT_IMG_DIR_
